# New-Streamer-AI-assistant

./: README.md  config.yaml.example  pyproject.toml  setup.py
stream_monitor/: __init__.py  config.py  main.py
stream_monitor/alerting/: __init__.py  analysis.py  notifiers.py  thresholds.py
stream_monitor/collectors/: __init__.py  base.py  bili.py  douyin.py  obs.py  system.py
stream_monitor/integration/: __init__.py  streamer_ai.py
stream_monitor/storage/: __init__.py  aggregator.py  database.py
stream_monitor/ui/: __init__.py  cli_dashboard.py
tests/: test_alerting.py  test_collectors.py  test_storage.py
