[tool.poetry]
name = "stream-health-monitor"
version = "0.1.0"
description = "Standalone Stream Health Monitoring Tool"
authors = ["StreamerAI Team"]
readme = "README.md"
packages = [{include = "stream_monitor"}]

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.17.0"
psutil = "^5.9.0"
obsws-python = "^1.7.0"
rich = "^13.7.0"
pyyaml = "^6.0.0"
aiohttp = "^3.9.0"

[tool.poetry.dependencies.streamer-ai]
version = "^0.1.0"
optional = true

[tool.poetry.extras]
platform = ["playwright", "blivedm"]
integration = ["streamer-ai"]

[tool.poetry.scripts]
stream-monitor = "stream_monitor.main:main"
stream-monitor-dashboard = "stream_monitor.ui.cli_dashboard:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"